# image-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue  Deleted.vue  Error.vue  Home.vue  ImageList.vue  Images.vue  Navbar.vue  Preview.vue  Settings.vue  api.js  main.js  utils.js
src/: analyzer.rs  cache.rs  checker.rs  disjoint_set.rs  main.rs  manager.rs  remover.rs
static/: app.js  images.html  index.html
