[package]
name = "image-dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
eyre = "0.6.8"
futures = "0.3.28"
image = "0.24.7"
image_hasher = "1.2.0"
rayon = "1.8.0"
serde = "1.0.188"
serde_json = "1.0.105"
sha256 = "1.4.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde"] }